Fixed header-title text nowrap mobile

--- a/src/App.css
+++ b/src/App.css
@@ -35,9 +35,10 @@ header a {
   transform: translateX(-50%);
   color: black;
   font-family: 'Pinyon Script', cursive;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 300;
   letter-spacing: 2px;
+  white-space: nowrap;
   /* z-index: 2; */
   /* text-shadow: 1px 1px 4px rgba(58, 217, 22, 0.3); */
 }
